--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,4 +12,19 @@
         <item>@string/preferences_theme_key_light</item>
         <item>@string/preferences_theme_key_dark</item>
     </string-array>
+
+
+    <string-array name="locale_entries">
+        <item>match system locale</item>
+        <item>English</item>
+        <item>French</item>
+    </string-array>
+
+    <string-array name="locale_values">:
+        <!-- references as strings here, to access them from code -->
+        <item>@string/preferences_locale_key_system</item>
+        <item>@string/preferences_locale_key_english</item>
+        <item>@string/preferences_locale_key_french</item>
+    </string-array>
+
 </resources>
