--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,12 +17,21 @@
         app:useSimpleSummaryProvider="true" />
 
     <ListPreference
-        app:defaultValue="system"
+        app:defaultValue="@string/preferences_theme_key_system"
         app:entries="@array/theme_entries"
         app:entryValues="@array/theme_values"
         app:icon="@drawable/ic_baseline_image_24"
         app:key="@string/preferences_theme_key"
         app:title="@string/preferences_theme_title"
+        app:useSimpleSummaryProvider="true" />
+
+    <ListPreference
+        app:defaultValue="@string/preferences_locale_key_system"
+        app:entries="@array/locale_entries"
+        app:entryValues="@array/locale_values"
+        app:icon="@drawable/ic_baseline_public_24"
+        app:key="@string/preferences_locale_key"
+        app:title="@string/preferences_locale_title"
         app:useSimpleSummaryProvider="true" />
 
     <Preference
