--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipChildren="false">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:clipChildren="false"
+            android:clipToPadding="false"
             android:elevation="7dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -92,10 +94,9 @@
         app:menu="@menu/drawer_menu">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
             android:layout_gravity="bottom"
-            android:layout_marginHorizontal="90dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_drawing_l"
             tools:ignore="ContentDescription" />
