--- a/app/src/main/res/drawable/ic_baseline_my_location_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_my_location_24.xml
@@ -1,7 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#B700C4FF"
+    android:width="32dp"
+    android:height="32dp"
+    android:alpha="0.72"
+    android:tint="#00C4FF"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
