--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,7 +23,7 @@
             app:toolbarId="@+id/collapsing_toolbar">
             <!-- app:layout_scrollInterpolator="@android:anim/decelerate_interpolator" -->
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/app_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
