--- a/app/src/main/res/layout/fragment_mates.xml
+++ b/app/src/main/res/layout/fragment_mates.xml
@@ -11,7 +11,7 @@
         android:id="@+id/mates_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="LinearLayoutManager"
         tools:itemCount="5"
         tools:listitem="@layout/fragment_mates_item" />
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
