--- a/app/src/main/res/layout/fragment_mates_item.xml
+++ b/app/src/main/res/layout/fragment_mates_item.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_baseline_image_24" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/mates_item_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
