--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="orange_darker">#c41b00</color>
     <color name="brown_lighter">#423b38</color>
     <color name="brown">#2B211F</color>
-    <color name="green">#4CAF50</color>
+    <color name="green">#238133</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="white_ish">#8FFFFFFF</color>
