--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/center_on_me"
+        android:contentDescription="@string/load_pois_in_this_zone"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_add_location_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
