--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,6 +50,21 @@
         <item name="android:textColorSecondary">@color/white_ish</item>
         <item name="android:tint">@color/white</item>
         <item name="android:windowBackground">@color/colorSurface</item>
+        <item name="alertDialogTheme">@style/Theme.Go4Lunch.alertDialog</item>
+    </style>
+
+    <style name="Theme.Go4Lunch.alertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/drawerSurface</item>
+        <item name="android:colorControlNormal">@color/white_ish</item>
+        <item name="android:colorControlActivated">@color/white</item>
+        <item name="textColorAlertDialogListItem">@color/white</item>
+        <item name="buttonBarButtonStyle">@style/Theme.Go4Lunch.button_style</item>
+    </style>
+
+    <style name="Theme.Go4Lunch.button_style">
+        <item name="android:backgroundTint">@color/colorSurface</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
