search online + fuzzy match to improve results quality, snackbar at the top, so virtual keyboard does not cover them.

--- a/app/src/main/res/values-fr/plurals.xml
+++ b/app/src/main/res/values-fr/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="received_pois">
+        <item quantity="one">%d POI reçu et affiché</item>
+        <item quantity="other">%d POIs reçus et affichés</item>
+    </plurals>
     <plurals name="received_mates_pois">
         <item quantity="one">%d POI de collègue reçu et affiché</item>
         <item quantity="other">%d POIs de collègues reçus et affichés</item>
