--- a/app/src/main/res/values/plurals.xml
+++ b/app/src/main/res/values/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="received_pois">
+        <item quantity="one">%d POI received and updated on view</item>
+        <item quantity="other">%d POIs received and updated on view</item>
+    </plurals>
     <plurals name="received_mates_pois">
         <item quantity="one">%d mate\'s POI received and updated on view</item>
         <item quantity="other">%d mates their POIs received and updated on view</item>
