--- a/app/src/main/res/layout/fragment_mates_item.xml
+++ b/app/src/main/res/layout/fragment_mates_item.xml
@@ -22,6 +22,7 @@
         android:layout_margin="10dp"
         android:ellipsize="end"
         android:maxLines="3"
+        android:textColor="@color/colorOnSecondary"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/mates_item_image"
         app:layout_constraintEnd_toEndOf="parent"
